--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -24,7 +24,7 @@ knitr::include_graphics("figure/chinook-map.png")
 \renewcommand*{\arraystretch}{1.5}
 \begin{table}[ht]
 \centering
-\caption{Overview of WCVI Chinook Stock Management Unit. Italics represent indicators with average PNI values < 0.5 and are excluded from analyses. The inlets, San Juan and Nitinat do not contain indicator stocks with PNI < 0.5 and are not included in these analyses. }
+\caption{Overview of WCVI Chinook Stock Management Unit. Italics represent indicators with average PNI values $<$ 0.5 and are excluded from analyses. The inlets, San Juan and Nitinat do not contain indicator stocks with PNI $<$ 0.5 and are not included in these analyses. }
 \begin{tabular}{p{0.3\textwidth}p{0.2\textwidth}p{0.4\textwidth}}
 \hline
 CU       &  Inlets   &  Indicators \\ 
@@ -75,15 +75,19 @@ Virtually all Chinook in this SMU are 'ocean type', entering the ocean 1-3 month
 
 We considered the 4 criteria identified in Holt et al. (in review) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs. Several dominant threats are similar across the 3 WCVI CUs. Large-scale hatcheries operating within all three CUs have resulted in genetic risks from introgression [@cosewicCOSEWICAssessmentStatus2020]. Also, straying from hatchery-influenced populations likely compromises the genetic composition of spawners across WCVI.  Landslides and sedimentation from forestry impact spawning habitat quality and quantity across WCVI. However, unique to West Vancouver Island-South is the relatively large number of aquaculture facilities for Atlantic salmon in nearshore habitat used by Chinook Salmon, which poses a threat to this CU [@cosewicCOSEWICAssessmentStatus2020]. Also unique to West Vancouver Island-Nootka and Kyuquot are threats from recreational fisheries (~100 lodges located in important areas of Chinook Salmon rearing) and industrial effluents from pulp mills [@cosewicCOSEWICAssessmentStatus2020].
 
+<!--CH, removed description of criteria required to infer status, as we don't do any sensitivity analysis for removing CUs:
+
 All three CUs likely experience similar freshwater environmental conditions being part of the same Freshwater Adaptive Zone, West Vancouver Island, characterized by very high river discharge, low wetland influence, and low alpine cold water and glacial influences [@holtbyConservationUnitsPacific2007]. Spawning habitats for all three CUs are primarily within the Coastal Western Hemlock biogeoclimatic zone. However, the marine environment experienced by juveniles from the West Vancouver Island-Nootka and Kyuoquot and West Vancouver Island-South CUs differs from that of the West Vancouver Island North CU to the north [@holtbyConservationUnitsPacific2007]. The two southern CUs are influenced by the Juan de Fuca Strait which affects food chain productivity in nearshore environments. For the northern CU, the nearshore marine environment is influenced primarily by the northward flowing coastal current in the North Pacific ocean [@cosewicCOSEWICAssessmentStatus2020].
  
-The average generation time is consistent across all three CUs, and they exhibit <!--the?--> ocean-type life-history variant and full<!--fall?--> run timing.  Absolute abundances are not available for these CUs [@brown2020SummaryAbundance2020]. <!--CH note: watershed-area estimate of population capacity for indicator stocks only as well, so are not absolute habitat capacities-->
+The average generation time is consistent across all three CUs, and they exhibit the ocean-type life-history variant and fall run timing.  Absolute abundances are not available for these CUs [@brown2020SummaryAbundance2020]. 
 
 Based on differences in threats and the coastal marine environment, we suggest that CU status cannot be inferred from neighboring CUs. We identified similarities in conditions at the CU scale because published threats assessments are available at this scale. Finer analyses at the inlet-scale could further inform the extent to which data-deficient inlets can be represented by those with data. 
 
+-->
+
 ### Previous assessments
 
-Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For West Vancouver Island-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
+Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'Red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For West Vancouver Island-South, Red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuoquot, Red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
 
 
 WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-age 2 survival rates for WCVI Chinook and low spawner levels over the past 2 decades are reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. Since the mid 1990s, a variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
@@ -152,7 +156,7 @@ knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
 
 ### Proportionate Natural Influence, PNI
 
-To evaluate the component of hatchery production, Proportionate Natural Influence, PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series where hatchery objectives have remained constant were < 0.5.  Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. <!--CH: Chuck asked that we formalize our guidance on estimating PNI I think referring to these previous 2 sentences?? (not sure exactly), I have adapt this sentence for the Guidelines paper ch1 "We recommend that thermal marking be used..."--> Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery. Thus,Gold River was excluded from our analyses. Also, although PNI of Artlish was marginally <0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 escapement indicator stocks without PNI data are not thought to be significantly enhanced: Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One escapement indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). 
+To evaluate the component of hatchery production, Proportionate Natural Influence, PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series where hatchery objectives have remained constant were $<$ 0.5.  Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. <!--CH: Chuck asked that we formalize our guidance on estimating PNI I think referring to these previous 2 sentences?? (not sure exactly), I have adapt this sentence for the Guidelines paper ch1 "We recommend that thermal marking be used..."--> Although Gold River had PNI values $>$ 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery. Thus, Gold River was excluded from our analyses. Also, although PNI of Artlish was marginally $<$ 0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 escapement indicator stocks without PNI data are not thought to be significantly enhanced: Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One escapement indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). 
 
 We initially considered a stricter definition of hatchery enhancement that included only populations with PNI values $\geqslant$ 0.72. This stricter threshold resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which on the WCVI tend to be populations with hatcheries. The threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, accounts for the trade-off between assessing CU-level biodiversity and excluding significant hatchery impacts. 
 
@@ -160,7 +164,7 @@ Guidelines and methods for estimating PNI values are currently being documented 
 
 Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances (i.e., combined natural- and hatchery-origin spawners) were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to situations where hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the design of hatchery marking and spawning ground sampling programs to collect data to estimate the contribution of hatchery-origin spawners to total production for these escapement indicator stocks. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU, and likely many others in Pacific Region.
 
-<!--KH: To think about for guidelines paper: are we recommending average PNI > 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  
+<!--KH: To think about for guidelines paper: are we recommending average PNI $>$ 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  
 
 CH: my initial thinking would be remove time-periods where PNI is very high from analyses. This is similar to approach of FR sockeye, where they removed historical periods of high hatchery enhancement in SR time-series. However, I think we could probably leave this as a recommendation that should come from SEP. For IFR, I think starting the data in 1998 removes most/all of those problems?
 -->
@@ -199,7 +203,7 @@ where, <!-- comma seems unnecessary here?-->
 
 and $a$ is recruits-per-spawner at low productivity. Maximum likelihood estimates of S~REP~ values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish [@liermannUsingAccessibleWatershed2010, Table \@ref(tab:chinook-benchmarks)]. <!--CH: Add when developed (Appendix \@ref(), link to code in Appendix \@ref(github-appendix)). -->  <!--KH: Note that I have included a link the this appendix in the chapter 2 overview, where I mention that code for all case studies is in the appendix. So, it may not be necessary to include in each case study individually?-->
 
-Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model and reported for many other ocean-type Chinook stocks  [>7 recruits/spawner, @parkenHabitatbasedMethodsEstimate2006].  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner<!--LW: can this be simplified to $a$~2.72 recruits/spawner?-->), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. <!--CH Q: do you think I need to mention this? "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."  
+Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model and reported for many other ocean-type Chinook stocks  [$>$ 7 recruits/spawner, @parkenHabitatbasedMethodsEstimate2006].  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner<!--LW: can this be simplified to $a$~2.72 recruits/spawner?-->), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. <!--CH Q: do you think I need to mention this? "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."  
 KH: As discussed via teams, I agree with leaving mention of the bias correction out.
 -->
 
@@ -252,25 +256,31 @@ knitr::include_graphics("figure/chinook-inlet-timeseries.png")
 ```
 
 
-CU status was derived from the proportion of component inlets above lower benchmarks. Serious harm is expected to occur when <!--KH: changed from 'was identified as'--> any one inlet within each of the 3 CUs drops below its lower benchmark. Here we have assumed the status of the one escapement indicator stock in the West Vancouver Island-North CU (Marble River) is representative of the CU. However, further consideration of this assumption is warranted with local expertise.
+CU status was derived from the proportion of component inlets above lower benchmarks. Serious harm is expected to occur when any one inlet within each of the 3 CUs drops below its lower benchmark. Here we have assumed the status of the one escapement indicator stock in the West Vancouver Island-North CU (Marble River) is representative of the CU. However, further consideration of this assumption is warranted with local expertise.
 
 ## LRP ESTIMATION: PROPORTION OF CUS
 
 ### Methods
-The LRP on the proportion of CUs was identified as all 3 CUs containing inlets with current statuses exclusively above their lower benchmarks. For the component inlets, abundances relative to lower benchmarks reflects status above/below the red zone based on the multidimensional approach used in the Pacific Salmon Status Scanner. Because inlets are nested within CUs, this LRP accounts for the distribution of spawning within CUs. 
 
+The LRP on the proportion of CUs was identified as all 3 CUs containing inlets with current statuses exclusively above Red status.  Because inlets are nested within CUs, this LRP accounts for the distribution of spawning among inlets within CUs. If any CU contained an inlet with Red status, the LRP was considered breached. Status of component inlets was derived from the multidimensional approach used within the Pacific Salmon Status Scanner or on a single metric of spawner abundances relative to the lower benchmark, S~gen~. 
+
+We further considered a proportional LRP based on CU statuses derived from a previously published WSP integrated assessment [status in 2014 only, @dfoIntegratedBiologicalStatus2016, Figure \@ref(fig:chinook-retro)].
 
 ### Results
 
 
-<!-- Is this section missing?-->
+Using the multidimensional approach implemented within the Salmon Scanner, for this SMU, status of component inlets can be inferred from spawner abundances against abundance-based lower benchmarks (Figure \@ref(fig:chinook-InletTimeSeries)). This is because time-series of abundances for WCVI Chinook are not absolute (only indicator stocks are monitored consistently) and relative-abundance benchmarks can be identified (S~gen~ and S~MSY~).  In the most recent year with data, 2020, 4 of 5 inlets were above their abundance-based lower benchmark, S~gen~ (Figure \@ref(fig:chinook-InletTimeSeries)). Therefore, 2 of 3 CUs contained inlets with current statuses exclusively above their lower benchmarks. One CU, Southern Vancouver Island, contains an inlet, Clayoquot, with status that has been consistently below its lower benchmark throughout the available time-series. Therefore this SMU falls below the LRP of 100% of CUs above Red status.
 
-## LRP ESTIMATION: AGGREGATE ABUNDANCE LOGISTIC REGRESSIONLRPS
+The status on a single metric of spawner abundances relative to benchmarks is therefore the same as that based on the multidimensional approach within the Salmon Scanner. 
 
+Only two of the three component CUs were assessed in the previously published WSP assessment, though those CUs were assessed as Red in 2014. For this year, the LRP would be considered breached because at least one CU had Red status. 
 
-Empirical LRPs based on the probability of all component inlets (nested within CUs) exceeded their lower benchmarks could not be identified for WCVI Chinook because there are no years when all inlets were above their lower benchmark in the historical record (Figure \@ref(fig:chinook-InletTimeSeries)). In order to fit a logistic regression model to data, observations of successes (years when all inlets were > lower benchmarks) and failures (years when all inlets were not > lower benchmarks) are required. The estimation of empirical LRPs is limited to SMUs with historical records that demonstrate contrast in status over time.
+## LRP ESTIMATION: AGGREGATE ABUNDANCE, LOGISTIC REGRESSION LRPS
 
-## LRP ESTIMATION: PROJECTION LRPS
+Logistic regression LRPs based on the probability of all component inlets (nested within CUs) exceeded their lower benchmarks could not be identified for WCVI Chinook because there are no years when all inlets were above their lower benchmark in the historical record (Figure \@ref(fig:chinook-InletTimeSeries)). In order to fit a logistic regression model to data, observations of successes (years when all inlets were $>$ lower benchmarks) and failures (years when all inlets were not $>$ lower benchmarks) are required. The estimation of logistic regression LRPs is limited to SMUs with historical records that demonstrate contrast in status over time.
+
+## LRP ESTIMATION: AGGREGATE ABUNDANCE, PROJECTION LRPS
+
 ### Methods
 
 Projection LRPs were derived for WCVI Chinook by projecting inlet-specific population dynamics using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). We chose to project inlet-specific rather than CU-specific population dynamics to reflect the relative demographic isolation of inlets. Population dynamics and exploitation parameters were derived from a previously developed CU-specific run-reconstruction for WCVI Chinook based on spawner abundances and age compositions from indicator stocks, and exploitation rates from the Robertson Creek hatchery indicator stock (D. Dobson & D. McHugh, pers. comm. DFO South Coast Stock Assessment). Because this run-reconstruction has not been peer-reviewed, it is not used to develop benchmarks, but can provide plausible distributions for parameters of projections. CU-specific parameters were applied across all component inlets. Inlet-specific population capacities, S~REP~, were estimated from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006] (Table \@ref(tab:chinook-WA)) and applied in projections of recruitment with a Ricker stock-recruitment model. The model was initialized at inlet-specific equilibrium abundances and projected for a 40-year initialization period to stabilize the distributions of spawner abundances. The model was then run for an additional 30 years and annual aggregate abundances and inlet-specific status were recorded. Because the projections identify long-term equilibrium abundances and statuses, the outputs are independent of initial abundances. Projections were summarized over 50,000 random Monte Carlo trials. A relatively large number of Monte Carlo trials was required for LRP estimation because the algorithm required a sufficient sample size within each 200-fish incremental bin of aggregate abundances along a range of realistic abundances (from near zero to capacity). <!-- CH comment: for base case, though we used only 10,000 for sensitivity analyses. --> Base-case parameters are provided in Table \@ref(tab:chinook-BaseCasePars) and sensitivity analyses are described in the text.  Projection LRPs were identified from the aggregate abundances with specified probabilities of all component inlets being above lower benchmarks. We recommend a review of model assumptions and parameters by local experts prior to adopting a projection LRP for this SMU. We provide an example for demonstration purposes.
@@ -408,6 +418,7 @@ Within the forward projection model, correlations in spawner abundances among in
 ERs <- read.csv("data/WCVIER.csv")
 ggplot(ERs,aes(Year, ER)) + geom_point() + geom_line()
 ```
+
 \newline
 *Covariance in exploitation*
 
@@ -517,7 +528,7 @@ knitr::include_graphics("figure/chinook-SpawnerCorrelation.png")
 
 ```
 
-When we scaled correlations in recruitment residuals to less than observed spawner correlations (i.e., scalar < 1) the resulting correlations in spawner abundances from the projections were lower than observed correlations (Figure \@ref(fig:chinook-boxplots)), but were roughly similar when recruitment residuals were scaled to 1. So, for our base case, we assumed correlations in recruitment residuals among inlets were equal to observed correlations among inlets.
+When we scaled correlations in recruitment residuals to less than observed spawner correlations (i.e., scalar $<$ 1) the resulting correlations in spawner abundances from the projections were lower than observed correlations (Figure \@ref(fig:chinook-boxplots)), but were roughly similar when recruitment residuals were scaled to 1. So, for our base case, we assumed correlations in recruitment residuals among inlets were equal to observed correlations among inlets.
 \linebreak
 
 *Variability in age proportions recruits among inlets*
@@ -566,9 +577,9 @@ knitr::include_graphics("figure/chinook-baseER-ProjLRPCurve-ALLp.png")
 <!--KH: You had asked for the colour codes I used to add my p lines in the projected plot.I used: colList<-c("#E69F00", "#56B4E9", "#009E73", "#D55E00").  However, I think your colours are similar, so I think its ok if this doesn't get changed.  Or, if it waits awhile.  -->
 
 
-Candidate projection LRPs were compared against time-series of aggregate abundances observed for WCVI Chinook salmon (sum of indicator stocks with PNI > 0.5), showing that abundances are currently below these LRPs and have been near or below them over the available time-series (Figure \@ref(fig:chinook-statusProjLRP)).
+Candidate projection LRPs were compared against time-series of aggregate abundances observed for WCVI Chinook salmon (sum of indicator stocks with PNI $>$ 0.5), showing that abundances are currently below these LRPs and have been near or below them over the available time-series (Figure \@ref(fig:chinook-statusProjLRP)).
 <!--CH; remove WCVI Chinook label at top of plot, and change colour of horizontal lines-->
-```{r chinook-statusProjLRP, echo=FALSE, fig.cap="Time-series of aggregate escapement for WCVI Chinook (indicator stocks with PNI > 0.5), with projection LRPs associated with component inlets being > lower benchmarks at p=0.5 (yellow) and p=0.66 (blue). Red points are the generational average escapement (geometric mean), red indicating status below LRPs", out.width = '60%'}
+```{r chinook-statusProjLRP, echo=FALSE, fig.cap="Time-series of aggregate escapement for WCVI Chinook (indicator stocks with PNI > 0.5), with projection LRPs associated with component inlets being > lower benchmarks at p=0.5 (yellow) and p=0.66 (blue). Red points are the generational average escapement (geometric mean), indicating status below LRPs", out.width = '60%'}
 
 #knitr::include_graphics("figure/chinook-WCVI-SMUtimeseries.png")
 knitr::include_graphics("figure/chinook-SMU-timeseries.png")
@@ -607,7 +618,7 @@ knitr::include_graphics("figure/chinook-ERs-ProjLRPCurve-ALLp.png")
 To explain the initially counter-intuitive result of sensitivity of projection LRPs to exploitation rates, we ran additional analyses for a hypothetical SMU where the spawner-recruitment parameters were either varied or kept constant over component inlets (or CUs) and Monte Carlo trials, and a range of exploitation rates were applied (Appendix \@ref(app:ERsensitivity-appendix)). Based on these sensitivity analyses, we found that differences in productivity among component inlets results in inlet-specific variability in sensitivity to exploitation rates. Inlets with relatively low productivity fall below lower benchmarks more frequently. This effect is accentuated when exploitation rates are high resulting in divergences in status among inlets and higher aggregate abundances required for all inlets to be above their lower benchmarks (i.e., higher LRP). 
 
 
-Given uncertainty in current and anticipated productivity, projection LRPs were further evaluated under a range of productivities from 75% - 150% of base case estimates, under current exploitation. Scenarios with lower productivity (<0.75x current estimates) had a large proportion of trajectories with productivity below replacement, for which LRPs could not be estimated. 
+Given uncertainty in current and anticipated productivity, projection LRPs were further evaluated under a range of productivities from 75% - 150% of base case estimates, under current exploitation. Scenarios with lower productivity ($<$ 0.75x current estimates) had a large proportion of trajectories with productivity below replacement, for which LRPs could not be estimated. 
 
 Projection LRPs tended to increase under low productivity and vice versa (Figure \@ref(fig:chinook-projLRPsAlpha)), a trend that was expected due to the inverse relationship between productivity and inlet-specific S~gen~ values [@holtCautionsUsingPercentilebased2015]. At low productivity, S~gen~ tends to increase, thereby becoming more precautionary.  The sensitivity of LRPs to productivity highlights the value of updating benchmarks and projection LRPs as productivity changes. Our results also show that uncertainty in projections increased under low productivity, likely requiring more random Monte Carlo trials for stabilization at p=0.5, i.e., 50% probability of CUs being above their lower benchmarks. The probability of all inlets being above their lower benchmark rarely met or exceeded 0.66 ['likely' category, @mastrandreaGuidanceNoteLead2010] when productivity was low, so LRPs at this level could not be estimated. When productivity was high, the probability of all inlets being above their lower benchmark rarely dropped below 0.66. At high productivity, LRPs at the p=0.5 level could not be estimated. More detailed analyses of LRPs along the entire range of productivities and exploitation was beyond the scope of this case study.
    
@@ -624,7 +635,9 @@ knitr::include_graphics("figure/chinook-Alphas-ProjLRPCurve-ALLp.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We evaluated the status of WCVI Chinook using LRPs estimated using the proportion of CUs with all inlets above S~gen~ and projection LRPs, as well as the previously published WSP integrated assessment [status in 2014 only, @dfoIntegratedBiologicalStatus2016, Figure \@ref(fig:chinook-retro)]. All methods indicate this SMU being below its LRP for years where data are available. We use the same nomenclature as for Interior Fraser River Coho Salmon, where 'Prop' indicates proportional LRPs, 'Abund' indicates aggregate abundance LRPs, 'Scanner' indicates CU-level assessments derived from the Pacific Salmon Status Scanner, 'Sgen' indicates CU assessments derived on a single metric, (e.g., abundances relative to the lower benchmark S~gen~), and 'Proj' indicates projection LRPs. For this SMU, the two approaches to CU assessments gave the same statuses, and are repeated in the plot for emphasis. 
+We evaluated the status of WCVI Chinook using LRPs estimated using proportional and projection methods. We show status against three types of proportional LRPs: an LRP based all component inlets having status above Red using the multidimensional algorithm in the Salmon Scanner, an LRP based all component inlets having spawner abundances above  S~gen~, and status based on the previously published WSP integrated assessment of CUs [status in 2014 only, @dfoIntegratedBiologicalStatus2016, Figure \@ref(fig:chinook-retro)]. The results from the multidimensional approach and abundances against S~gen~ are identical, but are shown separately for clarity. Although the Salmon Scanner can equally provide status on a single metric of abundances, we have differentiated them here again for clarity. 
+
+All methods indicate this SMU being below its LRP for years where data are available. We use the same nomenclature as for Interior Fraser River Coho Salmon, where 'Prop' indicates proportional LRPs, 'Abund' indicates aggregate abundance LRPs, 'Scanner' indicates CU-level assessments derived from the Pacific Salmon Status Scanner, 'Sgen' indicates CU assessments derived on a single metric, (e.g., abundances relative to the lower benchmark S~gen~), and 'Proj' indicates projection LRPs. 
    
 
 ```{r chinook-retro, echo=FALSE, fig.cap="Historical evaluation of status using available methods for estimating LRPs. Red bars indicate status below LRP; grey x's indicate status not available", out.width = '80%'}
@@ -638,14 +651,20 @@ knitr::include_graphics("figure/chinook-statusPlot-withBars2020.png")
 
 ## DISCUSSION
 
-A few key conclusions from this case study are highlighted for broader relevance. Status was consistent across the LRP methods that were available, and with a previously published assessment. This SMU is generally managed at scales smaller than the SMU supporting the application of proportional LRPs to allow management decisions to be responsive to CU- or inlet-level statuses. However, aggregate abundance LRPs were also estimated here for demonstration purposes. It was not possible to estimate a logistic regression LRP due to lack of contrast in the time-series, so we focused our analyses on projection LRPs.
+A few key conclusions from this case study are highlighted for broader relevance. Status was consistent across the LRP methods that were available, and with a previously published assessment. This SMU is generally managed at scales smaller than the SMU supporting the application of proportional LRPs to allow management decisions to be responsive to CU- or inlet-level statuses. However, aggregate abundance, projection LRPs were also estimated here for demonstration purposes only. It was not possible to estimate a logistic regression LRP due to lack of contrast in the time-series, so we focused our analyses on projection LRPs. 
 
 Projection LRPs were highly sensitivity to average exploitation for this SMU. LRPs derived assuming current exploitation rates cannot be used as an indicator of serious harm if the management procedure changes. Projection LRPs were also highly sensitive to underlying population productivities. As productivity declined, LRPs increased, becoming more precautionary, reflecting trends of underlying benchmarks. Projection LRPs at probabilities levels of 90% and 99% could not be estimated for this SMU because of the relatively low covariation in population dynamics among CUs. The probability of all CUs exceeding their lower benchmarks was never high, even at high aggregate abundances. 
 
-In the development of projection LRPs, inlets were chosen as the spatial scale of biodiversity required for the sustainability for the SMU. In future analyses, alternative assumptions could be considered, including LRPs derived to maintain diversity at the CU scale by projecting CU-level abundances.  In addition, future iterations of the multidimensional status assessments used within the Pacific Salmon Status Scanner could include information on the distribution of spawners across inlets within CUs to incorporate this finer scale of biodiversity.  The projection LRPs developed here are for demonstration purposes only. Further evaluation of the influence of hatcheries on spawner abundances and model assumptions, including the form of the stock-recruitment relationship, would be required prior to providing aggregate abundance LRPs for this SMU. 
 
 A key uncertainty for this SMU is the contribution of hatcheries to total abundances. Although only indicator stocks where most of the production was from natural spawning were included, hatchery enhancement likely biases abundance estimates upwards, providing an optimistic characterization of status compared to if the hatchery contribution were removed. Furthermore, hatchery production can result in optimistic estimates of recruitment and productivity, resulting in LRPs that are biased low. Time-series of hatchery-origin spawners were not available for most of the stocks we considered, precluding the ability to account for enhancement quantitatively in abundance estimates.
 
+We recommend a few areas for further research relevant to this SMU:
+
+- In the development of proportional and projection LRPs, inlets were chosen as the spatial scale of biodiversity required for the sustainability for the SMU. In future analyses, alternative assumptions could be considered, including LRPs derived to maintain diversity at the CU scale by projecting CU-level abundances.  
+
+- Future iterations of the multidimensional status assessments used within the Pacific Salmon Status Scanner could include information on the distribution of spawners across inlets within CUs to incorporate this finer scale of biodiversity. 
+
+- Further evaluation of the influence of hatcheries on spawner abundances and model assumptions, including the form of the stock-recruitment relationship, would be required prior to providing aggregate abundance LRPs for this SMU. 
 
 <!--CH:  Although time-series of pHOS don't exist for most stocks, we could actually remove ppn hatchery based on a recent estimate from 6 of 11 indicator stocks for abundances to compare against habitat based benchmarks. However, the most recent data I received from Jessy Jan 2021, had PNI estimates that ended in 2017 or 2018, so actually not very current. Also, because we can't remove it for all of them our aggregate abundances would be based on totals, so perhaps a disconnect between CU level status and aggregate-abundances if used to logistic regression. Also, status already below LRP, so reducing abundances wouldn't change management decision on this Q. 
 Mike Bradford mentioned that Q of what to do with stocks between PNI 0.5-0.72 is really a policy decision. Do we use all abundances or not? We should mention this; it's not just a question about uncertainty. 
